--- a/README.rdoc
+++ b/README.rdoc
@@ -37,13 +37,13 @@ The default serialized attribute used is +data+. There are two ways to change th
 
 This makes all of the accessors created with +data_attributes+ be saved in +:more_data+ instead of +:data+.  If a class has two (or more) serialized attributes that will share the storage responsibilities, each attribute defined with +data_attributes+ can be individually assigned to a serialized attribute by using a hash.
 
-    data_attributes { :details => :more_data }
+    data_attribute :details, { :serialized_column => :more_data }
 
 This creates an accessor that saves +:details+ to +:more_data+.
 
-Hashes can be combined with symbols and strings to define all the data attributes on one line.
+You can set a default to be returned, in the case the value hasn't be set yet.
 
-    data_attributes :attr1, 'attr2', { :attr3 => :more_data }, { :attr4 => :data, :attr5 => :data, :attr6 => :more_data }
+    data_attribute :details, { :default => "default value" }
 
 == Under The Hood
 
