--- a/README.rdoc
+++ b/README.rdoc
@@ -18,9 +18,9 @@ Consider a +User+ class that has a text field that is serialized, +:data+.
 
     end
 
-We can set an accessor to an attribute to be saved in the +:data+ field with the following:
+We can set an accessor to an attribute to be saved in the +data+ field with the following:
 
-    data_attributes :details
+    data_attribute :details
 
 This generates a read and write accessor called +details+.
 
